# toolholders

./: Makefile  pyproject.toml
scans/: IMG_4987.json  IMG_5005.json  IMG_5016.json  IMG_5023.json  IMG_5032.json  IMG_5044.json  IMG_5054_black.json  IMG_5065.json  IMG_5073.json  IMG_5103.json  IMG_5116.json  IMG_5123.json  IMG_5135.json  IMG_5145.json  IMG_5166.json  IMG_5173.json  IMG_5182.json  IMG_5196.json  IMG_5204.json  IMG_5222.json  IMG_5245.json  IMG_5256.json  IMG_5276.json  IMG_5306.json  IMG_5314.json  IMG_5335.json
toolholders/: bbox.py  export.py  geometry.py  main.py  morphology.py  pack.py  process.py  shapes.py
